--- a/styles/main.css
+++ b/styles/main.css
@@ -14,17 +14,15 @@ html {
     /* Fonts */
     --ff-sans-serif: "Lato", sans-serif;
     --ff-display: "Wix Madefor Display", sans-serif;
+    background: var(--cl-neutral-high);
+    color: var(--cl-primary);
 
     /* Root styles */
     font-family: var(--ff-sans-serif);
-    background: var(--cl-neutral-high);
-    color: var(--cl-primary);
 }
 
-/* 
-
-    Naked tags 
-    
+/*
+    Naked tags
 */
 
 html,
@@ -34,8 +32,8 @@ body {
 
 a {
     outline-offset: 0.2rem;
-    text-underline-offset: 0.25rem;
     color: var(--cl-primary);
+    text-underline-offset: 0.25rem;
 }
 
 li {
@@ -62,16 +60,15 @@ p {
 }
 
 hr {
-    /* margin-block: 3rem !important; */
-    background: red;
+    opacity: 0.6;
+    margin: 3rem auto !important;
     border: none;
     border-bottom: 1px solid var(--cl-primary);
-    opacity: 0.6;
+    background: red;
     width: 50%;
-    margin: 3rem auto !important;
 }
 
-/* 
+/*
     Utility
 */
 
@@ -79,15 +76,15 @@ hr {
     font-weight: 600;
 }
 
-/* 
+/*
     Blocks
 */
 
 /* Layout */
 .layout {
-    height: 100%;
     display: flex;
     flex-flow: column nowrap;
+    height: 100%;
 }
 .layout__content {
     flex-grow: 1;
@@ -96,15 +93,15 @@ hr {
 /* Hero */
 .hero {
     --bg-overlay-opacity: 40%;
-
-    background: linear-gradient(
+    display: grid;
+    place-items: center;
+    background:
+        linear-gradient(
             hsl(var(--cl-leaf-hsl) / var(--bg-overlay-opacity)),
             hsl(var(--cl-leaf-hsl) / var(--bg-overlay-opacity))
         ),
         left center / cover url("/hero-bg-cropped.jpg");
     padding: 4rem;
-    display: grid;
-    place-items: center;
 }
 .hero__logo {
     width: 19rem;
@@ -115,10 +112,8 @@ hr {
 .text-flow {
     --max-width: 80ch;
     --min-side-spacing: 2rem;
-
-    /* background: #f073; */
-    width: min(var(--max-width), 100vw - 2 * var(--min-side-spacing));
     margin-inline: auto;
+    width: min(var(--max-width), 100vw - 2 * var(--min-side-spacing));
 }
 .text-flow > * {
     margin-top: 1em;
@@ -130,18 +125,18 @@ hr {
 /* Footer */
 .footer {
     background: var(--cl-primary);
-    color: var(--cl-secondary);
     padding-block: 4rem;
+    color: var(--cl-secondary);
 }
 .footer__email {
     display: grid;
     place-items: center;
 }
 .footer__email a {
+    display: inline-block;
     color: inherit;
     font-weight: 600;
     text-decoration: none;
-    display: inline-block;
 }
 .footer__email-icon {
     margin: 0.5rem;
@@ -149,20 +144,18 @@ hr {
 
 /* Buttons */
 .btn {
-    padding: 1em;
+    display: inline-block;
+    border: 0.125rem solid transparent;
+    border-radius: 0.5em;
     background: var(--cl-secondary);
+    padding: 1em;
     color: var(--cl-primary);
     font-weight: 600;
     text-decoration: none;
-    border-radius: 0.5em;
-    border: 0.125rem solid transparent;
-    display: inline-block;
 }
 
-/* 
-
+/*
     Pages
-
 */
 .home__blurb {
     background: var(--cl-secondary);
